# opensearch-keeper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml.example  pyproject.toml
src/opensearch_keeper/: __init__.py  auth.py  cli.py  config.py  ism_policy_manager.py  template_manager.py  utils.py
tests/: test.sh  test_config.py  test_ism_policy_manager.py  test_template_manager.py
